<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Login">

  <ImageView
      android:id="@+id/iv_logo"
      android:layout_width="200dp"
      android:layout_height="200dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintVertical_bias="0.15"
      android:background="@drawable/login_logo"
      />

  <TextView
      android:id="@+id/tv_username"
      android:text="@string/txt_username"
      app:layout_constraintTop_toBottomOf="@+id/iv_logo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/tv_title"
     />

  <EditText
      android:id="@+id/et_email"
      style="@style/et"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/txt_enter_your_username"
      android:inputType="text"
      android:imeOptions="actionNext"
      app:layout_constraintTop_toBottomOf="@+id/tv_username" />

  <TextView
      android:id="@+id/tv_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/tv_title"
      android:layout_marginTop="10dp"
      android:text="@string/txt_password"
      app:layout_constraintTop_toBottomOf="@+id/et_email"
      />

  <EditText
      android:id="@+id/et_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/et"
      android:layout_marginTop="5dp"
      android:hint="@string/txt_enter_your_password"
      android:inputType="textPassword"
      android:imeOptions="actionDone"
      app:layout_constraintTop_toBottomOf="@+id/tv_password" />

  <Button
      android:id="@+id/bt_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/bt"
      android:layout_marginTop="20dp"
      android:text="@string/txt_login"
      app:layout_constraintTop_toBottomOf="@+id/et_password" />

  <TextView
      android:id="@+id/tv_forgot_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/txt_forgot_password"
      app:layout_constraintTop_toBottomOf="@+id/bt_login"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="15dp"
      style="@style/tv_title" />


</androidx.constraintlayout.widget.ConstraintLayout>