<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:padding="10dp">

    <ImageButton
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_resized"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/donkey_kong"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tv_title"
        android:text="@string/txt_name"

        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name_value"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tv_title"
        android:text="@string/txt_email"
        app:layout_constraintTop_toBottomOf="@id/tv_name_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/tv_email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email_Value"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent"/>



    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tv_title"
        android:text="@string/txt_phone_number"
        app:layout_constraintTop_toBottomOf="@id/tv_email_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv_phone_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone Number Value"
        app:layout_constraintTop_toBottomOf="@id/tv_phone"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tv_title"
        android:text="@string/txt_address"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_value"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv_address_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Address Value"
        app:layout_constraintTop_toBottomOf="@id/tv_address"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/bt"
        android:text="@string/txt_logout"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_value"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>